# speech_to_wordc

./: .gitignore  README.md  pyproject.toml
speech_to_wordc/: cli.py
tests/: test_speech_to_wordc.py
