[tool.poetry]
name = "speech_to_wordc"
version = "0.1.0"
description = ""
authors = ["motohidentaku <m@motohidentaku>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.13.26"
janome = "^0.3.10"
wordcloud = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
speech_to_wordc = 'speech_to_wordc.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
